--- a/style.css
+++ b/style.css
@@ -3,7 +3,21 @@ body {
 
 }
 h1 {
-    color: orangered;
-    text-shadow: 1px 1px 1px rgb(155, 155, 27);
+    color: #d36d0e;
     font-size: 50px;
+    text-shadow: 3px 2px 1px #db4237;
+    text-align: center;
+    padding-top: 3px;
+}
+
+header {
+    margin: 6px;
+    margin-bottom: 10px;
+    background-color: black;
+}
+
+nav {
+    button {
+        display: block; margin: auto;
+    }
 }
