--- a/style.css
+++ b/style.css
@@ -136,3 +136,17 @@ header {
     color: rgb(255, 255, 255);
     font-size: 20px;
   }
+
+  input {
+    margin: .4rem;
+}
+
+h5 {
+  text-align: center;
+      color: rgb(34, 117, 241);
+      text-transform: uppercase;
+      border: 5px outset rgb(26, 250, 37);
+      padding: 5px;
+      font-size: 20px;
+      padding: 4px;
+}
